@@ -2,27 +2,29 @@ package com.rempler.exnihiloadditions.compat.rei.category;
 
 import com.rempler.exnihiloadditions.compat.rei.EXAREIPlugin;
 import com.rempler.exnihiloadditions.compat.rei.display.REISiftingDisplay;
+import com.rempler.exnihiloadditions.compat.shared.RecipeLayoutConstants;
 import me.shedaniel.math.Point;
 import me.shedaniel.math.Rectangle;
 import me.shedaniel.rei.api.client.gui.Renderer;
-import me.shedaniel.rei.api.client.gui.widgets.TooltipContext;
 import me.shedaniel.rei.api.client.gui.widgets.Widget;
 import me.shedaniel.rei.api.client.gui.widgets.Widgets;
 import me.shedaniel.rei.api.client.registry.display.DisplayCategory;
 import me.shedaniel.rei.api.common.category.CategoryIdentifier;
 import me.shedaniel.rei.api.common.util.EntryStacks;
-import net.minecraft.ChatFormatting;
 import net.minecraft.network.chat.Component;
 import novamachina.exnihilosequentia.world.item.MeshItem;
 import novamachina.exnihilosequentia.world.item.MeshType;
-import novamachina.exnihilosequentia.world.item.crafting.MeshWithChance;
 import novamachina.exnihilosequentia.world.level.block.EXNBlocks;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
+/**
+ * Sifting category for REI that matches EMI's layout:
+ * - Input block on the left
+ * - Arrow
+ * - Grid of output items (each with its corresponding mesh icon below)
+ */
 public class REISiftingCategory implements DisplayCategory<REISiftingDisplay> {
     private final boolean isWet;
 
@@ -49,55 +51,53 @@ public class REISiftingCategory implements DisplayCategory<REISiftingDisplay> {
 
     @Override
     public int getDisplayWidth(REISiftingDisplay display) {
-        return 166;
+        int outputCount = display.getOutputEntries().size();
+        return RecipeLayoutConstants.siftDisplayWidth(outputCount) + 10;
     }
 
     @Override
     public int getDisplayHeight() {
-        return 78;
+        return RecipeLayoutConstants.siftDisplayHeight(7) + 10;
     }
 
     @Override
     public List<Widget> setupDisplay(REISiftingDisplay display, Rectangle bounds) {
         List<Widget> widgets = new ArrayList<>();
-        Point startPoint = new Point(bounds.x + 5, bounds.y + 5);
-
+        Point sp = new Point(bounds.x + 5, bounds.y + 5);
         widgets.add(Widgets.createRecipeBase(bounds));
 
-        // Input block (the block being sifted)
-        widgets.add(Widgets.createSlot(new Point(startPoint.x, startPoint.y + 1))
-                .entries(display.getInputEntries().getFirst())
+        int outputCount = display.getOutputEntries().size();
+        int contentHeight = RecipeLayoutConstants.siftDisplayHeight(outputCount);
+        int y = contentHeight - RecipeLayoutConstants.SLOT_SIZE;
+
+        // Input block
+        widgets.add(Widgets.createSlot(new Point(sp.x, sp.y + y / 2))
+                .entries(display.getInputEntries().get(0))
                 .markInput());
 
         // Arrow
-        widgets.add(Widgets.createArrow(new Point(startPoint.x + 22, startPoint.y + 1)));
+        widgets.add(Widgets.createArrow(new Point(
+                sp.x + RecipeLayoutConstants.ARROW_OFFSET_X, sp.y + y / 2 + 1)));
 
-        // Get the grouped drops from the recipe to render per-mesh rows
-        Map<MeshType, List<MeshWithChance>> groupedDrops = display.getRecipe().getRolls()
-                .stream().collect(Collectors.groupingBy(MeshWithChance::getMesh));
-
+        // Output items with mesh indicators below (matching EMI layout)
         List<MeshType> meshTypes = display.getMeshTypes();
-        int yOffset = 0;
+        for (int i = 0; i < outputCount && i < display.getOutputEntries().size(); i++) {
+            int slotX = sp.x + RecipeLayoutConstants.SIFT_OUTPUT_START_X
+                    + (i % RecipeLayoutConstants.SIFT_OUTPUT_COLS) * RecipeLayoutConstants.SLOT_SIZE;
+            int slotY = sp.y + (i / RecipeLayoutConstants.SIFT_OUTPUT_COLS) * RecipeLayoutConstants.SLOT_SIZE;
 
-        for (MeshType mesh : meshTypes) {
-            // Mesh icon on the left
-            widgets.add(Widgets.createSlot(new Point(startPoint.x + 50, startPoint.y + yOffset))
-                    .entry(EntryStacks.of(MeshItem.getMesh(mesh)))
-                    .disableBackground());
+            // Output item
+            widgets.add(Widgets.createSlot(new Point(slotX, slotY))
+                    .entries(display.getOutputEntries().get(i))
+                    .markOutput());
 
-            // Actual drop items for this mesh on the right
-            List<MeshWithChance> drops = groupedDrops.getOrDefault(mesh, List.of());
-            for (int i = 0; i < drops.size() && i < 5; i++) {
-                MeshWithChance drop = drops.get(i);
-
-                // The output is the actual dropped item with chance tooltip
-                widgets.add(Widgets.createSlot(new Point(startPoint.x + 70 + (i * 18), startPoint.y + yOffset))
-                        .entry(EntryStacks.of(display.getRecipe().getDrop()).tooltip(
-                                Component.literal(String.format("%.1f%%", drop.getChance() * 100f))
-                                        .withStyle(ChatFormatting.YELLOW)))
-                        .markOutput());
+            // Mesh icon below each output (like EMI does)
+            if (i < meshTypes.size()) {
+                MeshType mesh = meshTypes.get(i);
+                widgets.add(Widgets.createSlot(new Point(slotX, slotY + RecipeLayoutConstants.SIFT_MESH_OFFSET_Y))
+                        .entry(EntryStacks.of(MeshItem.getMesh(mesh)))
+                        .disableBackground());
             }
-            yOffset += 18;
         }
 
         return widgets;
