@@ -2,6 +2,7 @@ package com.rempler.exnihiloadditions.compat.rei.category;
 
 import com.rempler.exnihiloadditions.compat.rei.EXAREIPlugin;
 import com.rempler.exnihiloadditions.compat.rei.display.REISolidifyingDisplay;
+import com.rempler.exnihiloadditions.compat.shared.RecipeLayoutConstants;
 import me.shedaniel.math.Point;
 import me.shedaniel.math.Rectangle;
 import me.shedaniel.rei.api.client.gui.Renderer;
@@ -17,7 +18,6 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class REISolidifyingCategory implements DisplayCategory<REISolidifyingDisplay> {
-
     @Override
     public CategoryIdentifier<? extends REISolidifyingDisplay> getCategoryIdentifier() {
         return EXAREIPlugin.SOLIDIFYING;
@@ -35,36 +35,44 @@ public class REISolidifyingCategory implements DisplayCategory<REISolidifyingDis
 
     @Override
     public int getDisplayWidth(REISolidifyingDisplay display) {
-        return 150;
+        return RecipeLayoutConstants.SOLIDIFYING_WIDTH + 10;
     }
 
     @Override
     public int getDisplayHeight() {
-        return 50;
+        return RecipeLayoutConstants.SOLIDIFYING_HEIGHT + 10;
     }
 
     @Override
     public List<Widget> setupDisplay(REISolidifyingDisplay display, Rectangle bounds) {
         List<Widget> widgets = new ArrayList<>();
-        Point startPoint = new Point(bounds.getCenterX() - 50, bounds.y + 5);
-
+        Point sp = new Point(bounds.x + 5, bounds.y + 5);
         widgets.add(Widgets.createRecipeBase(bounds));
 
         // Fluid in tank (bottom)
-        widgets.add(Widgets.createSlot(new Point(startPoint.x, startPoint.y + 15))
+        widgets.add(Widgets.createSlot(new Point(
+                sp.x + RecipeLayoutConstants.SOLIDIFYING_TANK_X,
+                sp.y + RecipeLayoutConstants.SOLIDIFYING_TANK_Y))
                 .entries(display.getInputEntries().get(0))
                 .markInput());
 
         // Fluid on top (catalyst)
-        widgets.add(Widgets.createSlot(new Point(startPoint.x + 25, startPoint.y))
+        widgets.add(Widgets.createSlot(new Point(
+                sp.x + RecipeLayoutConstants.SOLIDIFYING_CATALYST_X,
+                sp.y + RecipeLayoutConstants.SOLIDIFYING_CATALYST_Y))
                 .entries(display.getInputEntries().get(1))
                 .markInput());
 
-        widgets.add(Widgets.createArrow(new Point(startPoint.x + 45, startPoint.y + 15)));
+        // Arrow
+        widgets.add(Widgets.createArrow(new Point(
+                sp.x + RecipeLayoutConstants.SOLIDIFYING_ARROW_X,
+                sp.y + RecipeLayoutConstants.SOLIDIFYING_ARROW_Y)));
 
-        // Result
-        widgets.add(Widgets.createSlot(new Point(startPoint.x + 80, startPoint.y + 15))
-                .entries(display.getOutputEntries().getFirst())
+        // Result item
+        widgets.add(Widgets.createSlot(new Point(
+                sp.x + RecipeLayoutConstants.SOLIDIFYING_OUTPUT_X,
+                sp.y + RecipeLayoutConstants.SOLIDIFYING_OUTPUT_Y))
+                .entries(display.getOutputEntries().get(0))
                 .markOutput());
 
         return widgets;
